apps/youtube/penpot/app/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: penpot
spec:
  hostnames:
    - "penpot.home.mirceanton.com"
  parentRefs:
    - name: envoy-internal
      namespace: network-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: penpot
          port: 8080
